Update homepage URL for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "reactfolio",
 	"version": "1.1.0",
-	"homepage": "https://harshithgangisetty.github.io/portfolio",
+	"homepage": "https://Harshith1201.github.io/Portfolio",
 	"description": "Personal portfolio template built using Reactjs",
 	"author": {
 		"name": "Tharindu N. Madhusanka",
